# Rag-Chatbot---Grow

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: refresh-data.yml
.streamlit/: config.toml
data/: sources.yaml
data/processed/: hdfc-balanced-advantage.json  hdfc-equity.json  hdfc-gold-etf-fof.json  hdfc-mid-cap.json  hdfc-multi-cap.json  hdfc-nifty50-index.json  hdfc-short-term-opportunities.json  hdfc-small-cap.json
docs/: Architecture.md  EdgeCases.md  ImplementationPlan.md
eval/phase6/: advisory_questions.yaml  factual_questions.yaml  run_eval.py
scripts/: build_index.py  refresh_data.py
src/mf_assistant/: __init__.py  config.py
src/mf_assistant/guardrails/: __init__.py  classifier.py  pii.py  refusals.py  validators.py
src/mf_assistant/index/: __init__.py  embedder.py  vectorstore.py
src/mf_assistant/ingestion/: __init__.py  chunker.py  normalizer.py  scraper.py
src/mf_assistant/llm/: __init__.py  groq_client.py
src/mf_assistant/pipeline/: __init__.py  rag.py
src/mf_assistant/prompts/: classifier.txt  system.txt
src/mf_assistant/retrieval/: __init__.py  reranker.py  retriever.py
tests/: test_phase1_ingestion.py
tests/phase1/: test_ingestion.py
tests/phase2/: test_index.py
tests/phase3/: test_pipeline.py
tests/phase4/: test_guardrails.py
ui/: streamlit_app.py
